--- a/frontend/src/components/Etudiant/content.css
+++ b/frontend/src/components/Etudiant/content.css
@@ -86,7 +86,9 @@
   color: #2c3e50;
   position: relative;
 }
-
+.section-title {
+  font-size: 24px;
+}
 .attachment-section h5::after {
   content: '';
   position: absolute;
